src/css/mystyle.css
@font-face {
	font-family: 'Roboto';
	font-style: normal;
	font-weight: 400;
	src: local('Roboto'), local('Roboto-Regular'), url(../fonts/Roboto/Roboto-Regular.woff2) format('woff2');
}

@font-face {
	font-family: 'Roboto';
	font-style: normal;
	font-weight: 700;
	src: local('Roboto Bold'), local('Roboto-Bold'), url(../fonts/Roboto/Roboto-Bold.woff2) format('woff2');
}

@font-face {
	font-family: 'Roboto';
	font-style: italic, oblique;
	src: local('Roboto Italic'), local('Roboto-Italic'), url(../fonts/Roboto/Roboto-Italic.woff2) format('woff2');
}

body {
	margin: 0;
	padding: 0 0.2em 0.2em;
	font-family: "Helvetica","Arial",sans-serif;
	text-rendering: optimizeLegibility;
	-webkit-font-smoothing: antialiased;
	background-color: #444444;
}

html, body, h5{
	font-size: 14px;
}

#main-editor{
	background-color: #2c3039;
}

::-webkit-scrollbar {
	height: 0;
	overflow: visible;
	width: 0.5em;
}
::-webkit-scrollbar-thumb {
	background-color: #666666;
	background-clip: padding-box;
	min-height: 1.4em;
	padding: 0;
	border: 1px solid #000000;
	border-radius: 3px;
}
::-webkit-scrollbar-thumb:hover{
	background-color: #777777;
}
::-webkit-scrollbar-button {
	height: 0;
	width: 0;
}
::-webkit-scrollbar-track {
	background-color: #333333;
}
::-webkit-scrollbar-corner {
	background: transparent;
}

#title-bar {
	height: 2.5em;
	width: 100%;
	-webkit-app-region: drag;
	padding: 0;
	margin: 0;
	background: #444444;
	color: #F1F1F1;
	border-bottom: 2px solid #333333;
	overflow: visible;
	font-family: sans-serif;
}

.my-main {
	width: 100%;
	height: calc( 100vh - 2.9em );
	display: flex;
	flex-flow: row nowrap;
}

#title-bar nav ul:after {
	clear: both;
	content: "";
	display: block;
}

#title-bar #title {
	float: left;
	padding-left: 1em;
	padding-right: 1em;
	line-height: 2em;
	font-size: 100%;
}

#title-bar #title-bar-btns {
	float: right;
	-webkit-app-region: no-drag;
	height: 100%;
}

#title-bar #title-bar-btns button {
	height: 2.6em;
	width: 2.6em;
	padding: 0;
	line-height: 4.0em;
	margin-left: 0.2em;
	background-color: transparent;
	border: none;
	outline: none;
	color: #F1F1F1;
	cursor: pointer;
	-webkit-transition: all .25s ease;
	transition: all .25s ease;
}

#title-bar #title-bar-btns button:hover {
	background-color: #222222;
}

#title-bar a.menu-button{
	display: inline-block;
	min-width: 0;
	width: 1.5em;
}

#title-bar a.menu-button span{
	display: block;
	margin: 0.3em 0;
	width: 100%;
	height: 4px;
	background-color: #FFF;
}

/* menu */

nav ul {
	-webkit-font-smoothing:antialiased;
	background: #333333;
	list-style: none;
	margin: 0;
	padding: 0;
	width: 100%;
}
nav li {
	float: left;
	margin: 0;
	padding: 0;
	position: relative;
}
nav li.right-align{
	float: right;
}
nav li hr{
	margin: 0.2em 0.5em;
	border: 1px solid #4e4e4e;
}
nav li > a, nav li > div {
	color: #F1F1F1;
	display: block;
	padding: 0.25em 1.0em;
	line-height: 2.2em;
	height: 2em;
	min-width: 6em;
	text-align: left;
	outline: none;
	text-decoration: none;
	-webkit-transition: all .25s ease;
	transition: all .25s ease;
}
nav li:first-child a{
	text-align: left;
	min-width: initial;
	padding-left: 1.0em;
	padding-right: 1.0em;
}

nav a i, nav div i{
	vertical-align: sub;
	margin-right: 0.2em;
}

nav li:hover a, nav li:hover ul, nav li:hover > div {
	background: #222222;
}
nav li ul {
	float: left;
	left: 0;
	opacity: 0;
	position: absolute;
	top: 2.5em;
	width: 15em;
	visibility: hidden;
	z-index: 10;
}
nav li.right-align ul{
	right: 0;
	left: initial;
}
nav li:hover ul {
	opacity: 1;
	visibility: visible;
}
nav li ul li {
	float: none;
	width: 100%;
}
nav li ul a{
	text-align: left;
}
nav li ul a:hover {
	background: #666666;
}

.CodeMirror-menu nav a{
	padding-top: 0;
	padding-bottom: 0;
}

/* menu end */

.outer_wrapper {
	display: table;
	height: 100%;
	width: 100%;
}

.cell-container {
	display: table-cell;
	vertical-align: top;
}

.cell-container:first-child {
	background-color: #26292e;
}

.resize-handler {
	display: table-cell;
	background: linear-gradient(#2c3039, #7781a9, #2c3039);
	height: 100%;
	width: 5px;
	cursor: col-resize;
}

.resize-handler:nth-child(2){
	background: linear-gradient(#26292e, #7781a9, #26292e);
}

.my-search {
	font-size: 14px;
	line-height: 2.2em;
	color: #fefefe;
	background-color: transparent;
	border: none;
	outline: none;
	width: 200px;
	margin: 0;
	padding: 0;
	transition: width 200ms, margin 200ms;
}
.my-search::-webkit-input-placeholder {
	color: rgba(250, 250, 250, 0.9);
}
.my-search:focus {
	outline: none;
	width: 250px;
}

.my-add-note {
	border: solid 1px #fefefe;
	height: 45px;
	border-radius: 50%;
	width: 45px;
	color: #eee;
	background-color: transparent;
	transition: background-color 200ms, border 200ms;
}
.my-add-note:hover {
	cursor: pointer;
	border: solid 1px rgb(115, 202, 181);
	background-color: rgb(115, 202, 181);
}
.my-add-note:focus {
	outline: none;
}

.my-sidebar-body {
	display: flex;
	flex-flow: row nowrap;
}

.my-shelf {
	color: rgba(250,250,250,0.9);
	
	font-weight: 200;
	width: auto;
	height: 100%;

	overflow-x: hidden;
	overflow-y: auto;
	white-space: nowrap;
}
.isShelfSelected {
	background-color: rgb(54, 62, 93);
	color: #FFF;
}
.noteIsHere {
	font-weight: 600;
}
.my-shelf-wrapper:hover {
	cursor: pointer;
}
.my-shelf-all {
	display: none;
	font-weight: 500;
	padding: 1px 0 1px 15px;
	border-radius: 0 2px 2px 0 / 0 2px 2px 0;

	-webkit-user-select: none;
	transition: background-color 200ms;
}
.my-shelf-all:hover {
	cursor: pointer;
}

.my-notes {
	box-sizing: border-box;

	color: #424242;
	width: auto;
	height: 100%;

	overflow-y: auto;
	overflow-x: hidden;
	-webkit-user-select: none;
}

.my-editor {
	height: 100%;
	width: auto;
	margin: 0 auto;
	overflow-y: auto;
	position: relative;
}

.my-editor-header {
	margin: 4px auto auto 16px;
	overflow: hidden;
	padding: 0 16px 8px;
	width: auto;
}

.my-editor-tag-icon {
	color: #888;
	font-size: small;
	line-height: 40px;
	height:40px;
	margin: auto;
}
/* ... */

